<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context="com.radob.healthmelt.f100137.HomeActivity">

    <TextView
        android:id="@+id/titleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HomeTitle"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp">
    </TextView>
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleHome"
        android:layout_margin="20dp"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/buttonBackground"
            app:cardCornerRadius = "8dp"
            android:elevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="60dp"
                    android:maxHeight="60dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/trolley"
                    android:contentDescription="@string/trolleyContentDescription">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine"
                    android:textAlignment="center"
                    android:textColor="@color/primaryBackground"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFindDoctors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/buttonBackground"
            app:cardCornerRadius = "8dp"
            android:elevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="60dp"
                    android:maxHeight="60dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/search"
                    android:contentDescription="@string/findDoctorsContentDescription">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Doctors"
                    android:textAlignment="center"
                    android:textColor="@color/primaryBackground"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardOrderDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/buttonBackground"
            app:cardCornerRadius = "8dp"
            android:elevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="60dp"
                    android:maxHeight="60dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/info"
                    android:contentDescription="@string/infoContentDescription">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Orders"
                    android:textAlignment="center"
                    android:textColor="@color/primaryBackground"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/buttonBackground"
            app:cardCornerRadius = "8dp"
            android:elevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="60dp"
                    android:maxHeight="60dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logout"
                    android:contentDescription="@string/logoutContentDescription">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Exit"
                    android:textAlignment="center"
                    android:textColor="@color/primaryBackground"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardHospitals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/buttonBackground"
            app:cardCornerRadius = "8dp"
            android:elevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="60dp"
                    android:maxHeight="60dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/hospital_location"
                    android:contentDescription="@string/findHospitalsContentDescription">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Hospitals"
                    android:textAlignment="center"
                    android:textColor="@color/primaryBackground"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBlank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/buttonBackground"
            app:cardCornerRadius = "8dp"
            android:elevation="8dp"
            app:cardUseCompatPadding="true">

        </androidx.cardview.widget.CardView>
    </GridLayout>


</RelativeLayout>