<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context="com.radob.healthmelt.f100137.RegistrationActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-172dp">

    <EditText
        android:id="@+id/editTextRegEmail"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#3200A5A5"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegUsername" />

    <TextView
        android:id="@+id/textViewRegEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegUsername"
        android:labelFor="@id/editTextRegEmail"/>

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#3000A5A5"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegPassword" />

    <EditText
        android:id="@+id/editTextRegPassword"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#3000A5A5"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegEmail" />

    <TextView
        android:id="@+id/textViewRegPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/confirmPassword"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegPassword" />

    <TextView
        android:id="@+id/textViewConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/passwordSource"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegEmail" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/finish"
        android:textColor="@color/primaryBackground"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/textViewExistingUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyHaveAccount"
        android:textColor="#2050FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <TextView
        android:id="@+id/textViewRegUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistration"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextRegUsername"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#3200A5A5"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistration" />

</androidx.constraintlayout.widget.ConstraintLayout>