<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context="com.radob.healthmelt.f100137.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="23dp">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="182dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:srcCompat="@drawable/health_icon"
        android:contentDescription="@string/logoContentDescription" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#3000A5A5"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginUsername" />

    <TextView
        android:id="@+id/textViewLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/passwordSource"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginUsername"
        app:layout_constraintVertical_bias="1.0"
        android:labelFor="@+id/editTextLoginPassword"/>

    <EditText
        android:id="@+id/editTextLoginUsername"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#3200A5A5"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textViewLoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/login"
        android:textColor="@color/primaryBackground"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:text="@string/makeAccount"
        android:textAlignment="center"
        android:textColor="#2050FB"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.222" />

</androidx.constraintlayout.widget.ConstraintLayout>